Icones to icones + list

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Página de currículo pessoal com o objetivo de me apresentar ao mercado de trabalho." />
+        <meta name="description" content="Página de currículo pessoal com o objetivo de me apresentar ao mercado de trabalho. Página criada utilizando conhecimentos de HTML5, Bootstraps e CSS3, ustilizei um template do Bootstraps." />
         <meta name="author" content="Lucas Vieira" />
-        <meta name="keywords" content="Currículo, Pessoal, Clean, Bootstrap, HTML, CSS" />
+        <meta name="keywords" content="Currículo, Pessoal, Clean, Bootstrap, HTML, CSS, Lucas Vieira" />
         <title>Currículo Pessoal - Esta é a página do meu currículo pessoal, ela serve para me apresentar ao mercado de trabalho.</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -44,6 +44,9 @@
             }
             .social-icons .social-icon:hover {
               background-color: #00C1B2 !important;
+            }
+            .icones{
+                font-size: 1vh;
             }
         </style>
         <!-- Navigation-->
@@ -121,7 +124,7 @@
                             <div class="subheading mb-3">Análise e Desenvolvimento de Sistemas</div>
                             <div>Primeiro semestre</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="data text-primary">Agosto 2019 - Janeiro 2020</span></div>
+                        <div class="flex-shrink-0"><span class="data text-primary">Agosto 2019 - Em andamento</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -129,7 +132,7 @@
                             <div class="subheading mb-3">Técnico em informática</div>
                             <p>Terceiro trimestre</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="data text-primary">Junho 2019 - Ainda em andamento</span></div>
+                        <div class="flex-shrink-0"><span class="data text-primary">Junho 2019 - Em andamento</span></div>
                     </div>
                 </div>
             </section>
@@ -139,12 +142,27 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Habilidades</h2>
                     <div class="subheading mb-3">Ferramentas & Linguagem de programação</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-java"></i></li>
-                        <li class="list-inline-item"><i class="fas fa-file-excel"></i></li>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fab fa-html5"></i></span>
+                            HTML5
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fab fa-css3-alt"></i></span>
+                            CSS3
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-file-excel"></i></span>
+                            Excel - Avançado 
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fab fa-java"></i></span>
+                            Java 
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fab fa-js-square"></i></span>
+                            JavaScript
+                        </li>
                     </ul>
                     <div class="subheading mb-3">Competências</div>
                     <ul class="fa-ul mb-0">
