.subheading + margin-top: 1rem;
i have added margin top in the h2 subheading.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             .icones{
                 font-size: 1vh;
             }
+            .subheading{
+                margin-top: 1rem !important;
+            }
         </style>
         <!-- Navigation-->
         <nav class="barraesquerda navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
