--- a/index.html
+++ b/index.html
@@ -17,7 +17,41 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-       
+        <!-- Meu CSS -->
+        <style type="text/css">
+            h2{
+                text-shadow: 2px 2px 5px grey !important;
+            }
+            .barraesquerda{
+                background-color: #00C1B2 !important;
+                box-shadow: 2px 2px 20px grey !important;
+            }
+            .nome{
+                 color: #00C1B2 !important;
+                 text-shadow: 2px 2px 5px grey !important;
+            }
+            .nome1{
+                 text-shadow: 2px 2px 5px grey !important;
+            }
+            .linkemail{
+                color: #00C1B2 !important; 
+            }
+            .data{
+                color: #00C1B2 !important; 
+            }
+            .socialicone:hover{
+                color: #00C1B2 !important;
+            }
+            .social-icons .social-icon:hover {
+              background-color: #00C1B2 !important;
+            }
+            .icones{
+                font-size: 1vh;
+            }
+            .subheading{
+                margin-top: 1rem !important;
+            }
+        </style>
         <!-- Navigation-->
         <nav class="barraesquerda navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
