--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Lucas Vieira" />
         <meta name="keywords" content="Currículo, Pessoal, Clean, Bootstrap, HTML, CSS, Lucas Vieira" />
         <title>Currículo Pessoal - Esta é a página do meu currículo pessoal, ela serve para me apresentar ao mercado de trabalho.</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/icon.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -50,6 +50,9 @@
             }
             .subheading{
                 margin-top: 1rem !important;
+            }
+            img{
+                box-shadow: 1px 1px 20px grey;
             }
         </style>
         <!-- Navigation-->
