--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Lucas Vieira" />
         <meta name="keywords" content="Currículo, Pessoal, Clean, Bootstrap, HTML, CSS, Lucas Vieira" />
         <title>Currículo Pessoal - Esta é a página do meu currículo pessoal, ela serve para me apresentar ao mercado de trabalho.</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/icon.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -43,13 +43,17 @@
                 color: #00C1B2 !important;
             }
             .social-icons .social-icon:hover {
-              background-color: #00C1B2 !important;
+                background-color: #00C1B2 !important;
+                transition: 0.5s;
             }
             .icones{
                 font-size: 1vh;
             }
             .subheading{
                 margin-top: 1rem !important;
+            }
+            img{
+                box-shadow: 1px 1px 20px grey;
             }
         </style>
         <!-- Navigation-->
@@ -101,7 +105,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Aprendiz em Administração</h3>
                             <div class="subheading mb-3">Vicasa</div>
-                            <p>Nessa experiência de dois anos como aprendiz administrativo na Vicasa, atuei no setor de segurança de imagens, monitorando através de alguns softwares como Seiba e NGS, câmeras internas e externas de ônibus na região de Canoas e Porto Alegre.</p>
+                            <p>Nessa experiência de dois anos como aprendiz administrativo na Vicasa, atuei no setor de segurança de imagens, monitorando através de alguns softwares como Seiba e NGS, câmeras internas e externas dos ônibus na região de Canoas e Porto Alegre.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="data text-primary">Outubro 2018 - Outubro 2020</span></div>
                     </div>
