Text correction and download button
I had add a button to download the resume.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                         <a class="social-icon" href="https://github.com/LucasJVieira" target="_blank"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/lucasj_vieira" target="_blank"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://instagram.com/lucasj_vieira?igshid=13dhg0vvrwyym" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a class="social-icon" href="https://drive.google.com/file/d/1eyymd3VwZ1owEMEjZYoGKbkbnA689Fyh/view?usp=sharing" target="_blank"><i class="fa fa-download"></i></a>
                     </div>
                 </div>
             </section>
@@ -193,7 +194,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interesses</h2>
-                    <p>Além de ser um estudante da área da tecnologia, eu gosto de aproveitar meu tempo livre fazendo atividades ao ar livre como praticar ciclismo, caminhadas, fotografar paisagens ou fazer algum passeio com minha família e amigos.</p>
+                    <p>Além de ser um estudante na área da tecnologia, gosto de aproveitar meu tempo livre fazendo atividades ao ar livre, como: praticar ciclismo, caminhadas, fotografar paisagens ou fazer algum passeio com minha família e amigos.</p>
                     <p class="mb-0">Quando tenho que ficar dentro de casa, assisto alguma série, assisto animes, vejos filmes e passo grande parte do meu tempo livre explorando os mais recentes avanços tecnológicos no mundo.</p>
                 </div>
             </section>
