--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Aprendiz em TI</h3>
                             <div class="subheading mb-3">RedeBrasil</div>
-                            <p>Nesses um ano e três meses de experiência, tive a oportunidade de ter o meu primeiro contato com a área de informática, trabalhei no setor de TI da empresa como aprendiz, junto com mais dois colegas, nós lidava-mos com diversas situações que no geral eram mais voltadas para o suporte, tanto de hardware quando software, nisso estava incluido: Fazer trocas de máquinas, componentes, periféricos ou até mesmo fazer atualizações de sistema e configurar máquinas novas que chegavam. Posso dizer que foi uma ótima expêriencia profissional e pessoal, pois fiz muitas amizades que levo até os dias de hoje.</p>
+                            <p>Nesses um ano e três meses de experiência, tive a oportunidade de ter o meu primeiro contato com a área de informática, trabalhei no setor de TI da empresa como aprendiz, junto com mais dois colegas, nós lidavamos com diversas situações que no geral eram mais voltadas para o suporte, tanto de hardware quando software, nisso estava incluido: Fazer trocas de máquinas, componentes, periféricos ou até mesmo fazer atualizações de sistema e configurar máquinas novas que chegavam. Posso dizer que foi uma ótima expêriencia profissional e pessoal, pois fiz muitas amizades que levo até os dias de hoje.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="data text-primary">Outubro 2016 - Janeiro 2018</span></div>
                     </div>
