--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                  text-shadow: 2px 2px 5px grey !important;
             }
             .linkemail{
-                color: #00C1B2 !important; 
+                color: #00C1B2 !important;
             }
             .data{
-                color: #00C1B2 !important; 
+                color: #00C1B2 !important;
             }
             .socialicone:hover{
                 color: #00C1B2 !important;
@@ -120,7 +120,7 @@
                     </div>
                 </div>
             </section>
-            
+
             <hr class="m-0" />
             <!-- Education-->
             <section class="resume-section" id="education">
@@ -161,15 +161,19 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-file-excel"></i></span>
-                            Excel - Avançado 
+                            Excel - Avançado
                         </li>
                         <li>
                             <span class="fa-li"><i class="fab fa-java"></i></span>
-                            Java 
+                            Java
                         </li>
                         <li>
                             <span class="fa-li"><i class="fab fa-js-square"></i></span>
                             JavaScript
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fab fa-php"></i></span>
+                            PHP
                         </li>
                     </ul>
                     <div class="subheading mb-3">Competências</div>
@@ -184,7 +188,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Trabalho em equipe 
+                            Trabalho em equipe
                         </li>
                     </ul>
                 </div>
